...
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Filtrar"
            android:textSize="18sp" />

        <Switch
            android:id="@+id/columnasSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Columnas" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/header" />

</RelativeLayout>
