...
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageViewRight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@android:drawable/star_big_on" />

        <ImageView
            android:id="@+id/cartIcon"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            app:srcCompat="@drawable/cart" />

    </LinearLayout>

...
